force-app/main/default/objects/Certification_Question__c/Certification_Question__c.object-meta.xml
<CustomObject>
    <label>Certification Question</label>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>