force-app/main/default/objects/Certification_Question__c/fields/Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Type__c</fullName>
    <label>Answer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Single Choice</fullName><default>true</default><label>Single Choice</label></value>
            <value><fullName>Multiple Choice</fullName><default>false</default><label>Multiple Choice</label></value>
            <value><fullName>True/False</fullName><default>false</default><label>True/False</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>