force-app/main/default/objects/Certification_Question__c/fields/Answer_Verification_Note__c.field-meta.xml
<CustomField>
    <fullName>Answer_Verification_Note__c</fullName>
    <label>Answer Verification Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>