force-app/main/default/objects/Certification_Question__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Certification Questions</relationshipLabel>
    <relationshipName>Certification_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>