force-app/main/default/objects/Certification_Question__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <label>Correct Answer</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <description>Correct option letter(s), e.g. D or A,B,C for multi-select questions. For True/False questions use True or False.</description>
</CustomField>