force-app/main/default/objects/Certification_Question__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Easy</fullName><default>false</default><label>Easy</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>Hard</fullName><default>false</default><label>Hard</label></value>
            <value><fullName>Unknown</fullName><default>true</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>