force-app/main/default/objects/Certification_Question__c/fields/Dump_Answer_Verified_Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Dump_Answer_Verified_Incorrect__c</fullName>
    <label>Dump Answer Verified Incorrect</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>