force-app/main/default/objects/Certification_Question__c/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <label>Explanation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>