force-app/main/default/objects/Certification_Question__c/fields/Explanation_Translated__c.field-meta.xml
<CustomField>
    <fullName>Explanation_Translated__c</fullName>
    <label>Explanation (Translated)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>