force-app/main/default/objects/Certification_Question__c/fields/External_Source_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Source_Reference__c</fullName>
    <label>External Source Reference</label>
    <length>255</length>
    <type>Text</type>
    <description>Free-text reference to the original source, e.g. file name plus page, for audit purposes.</description>
</CustomField>