force-app/main/default/objects/Certification_Question__c/fields/Option_B__c.field-meta.xml
<CustomField>
    <fullName>Option_B__c</fullName>
    <label>Option B</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>