force-app/main/default/objects/Certification_Question__c/fields/Option_C__c.field-meta.xml
<CustomField>
    <fullName>Option_C__c</fullName>
    <label>Option C</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>