force-app/main/default/objects/Certification_Question__c/fields/Option_D__c.field-meta.xml
<CustomField>
    <fullName>Option_D__c</fullName>
    <label>Option D</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>