force-app/main/default/objects/Certification_Question__c/fields/Option_E__c.field-meta.xml
<CustomField>
    <fullName>Option_E__c</fullName>
    <label>Option E</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>