force-app/main/default/objects/Certification_Question__c/fields/Option_F__c.field-meta.xml
<CustomField>
    <fullName>Option_F__c</fullName>
    <label>Option F</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>