force-app/main/default/objects/Certification_Question__c/fields/Question_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Question_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Question External Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <description>Composite upsert key, recommended format CertificationCode-Q0001, so re-imports of the same source update existing records instead of duplicating them.</description>
</CustomField>