force-app/main/default/objects/Certification_Question__c/fields/Question_Language__c.field-meta.xml
<CustomField>
    <fullName>Question_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>EN</fullName><default>true</default><label>English</label></value>
            <value><fullName>KO</fullName><default>false</default><label>Korean</label></value>
            <value><fullName>JA</fullName><default>false</default><label>Japanese</label></value>
            <value><fullName>ZH</fullName><default>false</default><label>Chinese</label></value>
            <value><fullName>ES</fullName><default>false</default><label>Spanish</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Primary language of Question_Text__c.</description>
</CustomField>