force-app/main/default/objects/Certification_Question__c/fields/Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Number__c</fullName>
    <label>Question Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Sequential number of this question within its source document, e.g. NO.1, NO.2. Unique only in combination with Certification.</description>
</CustomField>