force-app/main/default/objects/Certification_Question__c/fields/Question_Status__c.field-meta.xml
<CustomField>
    <fullName>Question_Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Needs Review</fullName><default>false</default><label>Needs Review</label></value>
            <value><fullName>Duplicate</fullName><default>false</default><label>Duplicate</label></value>
            <value><fullName>Retired</fullName><default>false</default><label>Retired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>