force-app/main/default/objects/Certification_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
    <description>Primary-language question stem.</description>
</CustomField>