force-app/main/default/objects/Certification_Question__c/fields/Question_Text_Translated__c.field-meta.xml
<CustomField>
    <fullName>Question_Text_Translated__c</fullName>
    <label>Question Text (Translated)</label>
    <length>131072</length>
    <type>LongTextArea</type>
    <description>Optional translated version of the question stem, e.g. Korean translation of an English exam.</description>
</CustomField>