force-app/main/default/objects/Certification_Question__c/fields/Source_Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Page_Number__c</fullName>
    <label>Source Page Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Page number in the original source document where this question appeared, for traceability.</description>
</CustomField>