force-app/main/default/objects/Certification_Question__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
    <description>Free-text sub-topic or domain within the certification, e.g. Workspace Management, Security and Compliance. Kept as text rather than picklist since topics vary per certification.</description>
</CustomField>